add styles to 1 and 2 section

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
                         <li><a class="link" href="">Portfolio</a></li>
                         <li><a class="link" href="">Contacts</a></li>
                     </ul>
-            </nav>
-            
+            </nav>           
             <address class="had-address">
                 <ul class="address-nav">
                     <li>
@@ -39,7 +38,9 @@
                     </li>
                 </ul>
             </address>
+            
         </div>
+
     </header>
 
     <main>
@@ -49,26 +50,26 @@
                 <button class="main-button">Order Service</button>
             </div>
         </section>
-        <section>
+        <section class="second-section">
             <div class="container">
                 <h2 class="spase">Advantages</h2>
                 <ul class="feature">
-                    <li>
+                    <li class="feat-items">
                         <h3 class="feat-title">Strategy</h3>
                         <p class="feat-text">Our goal is to identify the business problem to walk away with the
                             perfect and creative solution.</p>
                     </li>
-                    <li>
+                    <li class="feat-items">
                         <h3 class="feat-title">Punctuality</h3>
                         <p class="feat-text">Bring the key message to the brand's audience for the best price within
                             the shortest possible time.</p>
                     </li>
-                    <li>
+                    <li class="feat-items">
                         <h3 class="feat-title">Diligence</h3>
                         <p class="feat-text">Research and confirm brands that present the strongest
                             digital growth opportunities and minimize risk.</p>
                     </li>
-                    <li>
+                    <li class="feat-items">
                         <h3 class="feat-title">Technologies</h3>
                         <p class="feat-text">Design practice focused on digital experiences.
                             We bring forth a deep passion for problem-solving.</p>
