--- a/index.html
+++ b/index.html
@@ -77,74 +77,94 @@
                 </ul>
             </div>
         </section>
-        <section class="team-list">
+        <section class="team-section">
             <div class="container">
                 <h2 class="team-title">Our Team</h2>
 
                 <ul class="team-list-bloks">
                     <li class="team-list-box">
                         <img class="team-pictur" src="./images/team1.jpg" alt="photo of Mark Guerrero" width="264" />
-                        <h3 class="team-name">Mark Guerrero</h3>
-                        <p class="team-text">Product Designer</p>
+                        <div class="box-name">
+                            <h3 class="team-name">Mark Guerrero</h3>
+                            <p class="team-text">Product Designer</p>
+                        </div>
                     </li>
                     <li class="team-list-box">
                         <img class="team-pictur" src="./images/team2.jpg" alt="photo of Tom Ford" width="264" />
-                        <h3 class="team-name">Tom Ford</h3>
-                        <p class="team-text">Frontend Developer</p>
+                        <div class="box-name">
+                            <h3 class="team-name">Tom Ford</h3>
+                            <p class="team-text">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="team-list-box">
                         <img class="team-pictur" src="./images/team3.jpg" alt="photo of Camila Garcia" width="264" />
-                        <h3 class="team-name">Camila Garcia</h3>
-                        <p class="team-text">Marketing</p>
+                        <div class="box-name">
+                            <h3 class="team-name">Camila Garcia</h3>
+                            <p class="team-text">Marketing</p>
+                        </div>
                     </li>
                     <li class="team-list-box">
                         <img class="team-pictur" src="./images/team4.jpg" alt="photo of Daniel Wilson" width="264" />
-                        <h3 class="team-name">Daniel Wilson</h3>
-                        <p class="team-text">UI Designer</p>
+                        <div class="box-name">
+                            <h3 class="team-name">Daniel Wilson</h3>
+                            <p class="team-text">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
             </div>
         </section>
 
-        <section class="portfolio-list">
+        <section class="portfolio-section">
             <div class="container">
                 <h2 class="portfolio-title">Our Portfolio</h2>
                 <ul class="portfolio-list-blocks">
-                    <li>
+                    <li class="portfolio-box">
                         <img class="portfolio-image" src="./images/projectcard1.jpg" alt="pictur of Banking App project"
                             width="360" />
-                        <h3 class="portfolio-list-blocks-title">Banking App</h3>
-                        <p class="portfolio-text">App</p>
+                            <div class="port-disscr">
+                                <h3 class="portfolio-list-blocks-title">Banking App</h3>
+                                <p class="portfolio-text">App</p>
+                            </div>
                     </li>
-                    <li>
+                    <li class="portfolio-box">
                         <img class="portfolio-image" src="./images/projectcard2.jpg"
                             alt="pictur of Cashless Payment project" width="360" />
-                        <h3 class="portfolio-list-blocks-title">Cashless Payment</h3>
-                        <p class="portfolio-text">Marketing</p>
-                    </li>
-                    <li>
+                            <div class="port-disscr">
+                                <h3 class="portfolio-list-blocks-title">Cashless Payment</h3>
+                                <p class="portfolio-text">Marketing</p>
+                            </div>
+                    </li >
+                    <li class="portfolio-box">
                         <img class="portfolio-image" src="./images/projectcard3.jpg" alt="pictur of Meditation App project"
                             width="360" />
-                        <h3 class="portfolio-list-blocks-title">Meditation App</h3>
-                        <p class="portfolio-text">App</p>
+                            <div class="port-disscr">
+                                <h3 class="portfolio-list-blocks-title">Meditation App</h3>
+                                <p class="portfolio-text">App</p>
+                            </div>
                     </li>
-                    <li>
+                    <li class="portfolio-box">
                         <img class="portfolio-image" src="./images/projectcard4.jpg" alt="pictur of Taxi Service project"
                             width="360" />
-                        <h3 class="portfolio-list-blocks-title">Taxi Service</h3>
-                        <p class="portfolio-text">Marketing</p>
+                            <div class="port-disscr">
+                                <h3 class="portfolio-list-blocks-title">Taxi Service</h3>
+                                <p class="portfolio-text">Marketing</p>
+                            </div>
                     </li>
-                    <li>
+                    <li class="portfolio-box">
                         <img class="portfolio-image" src="./images/projectcard5.jpg"
                             alt="pictur of Screen Illustrations project" width="360" />
-                        <h3 class="portfolio-list-blocks-title">Screen Illustrations</h3>
-                        <p class="portfolio-text">Design</p>
+                            <div class="port-disscr">
+                                <h3 class="portfolio-list-blocks-title">Screen Illustrations</h3>
+                                <p class="portfolio-text">Design</p>
+                            </div>
                     </li>
-                    <li>
+                    <li class="portfolio-box">
                         <img class="portfolio-image" src="./images/projectcard6.jpg" alt="pictur of Online Courses project"
                             width="360" />
-                        <h3 class="portfolio-list-blocks-title">Online Courses</h3>
-                        <p class="portfolio-text">Marketing</p>
+                            <div class="port-disscr">
+                                <h3 class="portfolio-list-blocks-title">Online Courses</h3>
+                                <p class="portfolio-text">Marketing</p>
+                            </div>
                     </li>
                 </ul>
             </div>
