--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </section>
         <section class="second-section">
             <div class="container">
-                <h2 class="spase">Advantages</h2>
+                <h2 class="visually-hidden">Advantages</h2>
                 <ul class="feature">
                     <li class="feat-items">
                         <h3 class="feat-title">Strategy</h3>
